tests/evaluator/should_pass/lambdas.csp
test1 = (\ x, y @ x)(0, 1) == 0
test2 = (\ <x>, y @ x)(<0>, 1) == 0
test3 = (\ <x>, <y> @ y)(<0>, <1>) == 1
