tests/evaluator/should_fail/lambdas.csp
test4 = (\ <>, <y> @ y)(<0>, <1>) == 1
